--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -122,7 +122,7 @@
                     % if title == "Graphs":
                     <li class="active"><a href="graphs">图表</a></li>
                     % else:
-                    <li><a href="graphs">Graphs</a></li>
+                    <li><a href="graphs">图表</a></li>
                     % endif
                     % if title == "Settings":
                     <li class="dropdown active">
