--- a/data/interfaces/default/edit_user.html
+++ b/data/interfaces/default/edit_user.html
@@ -86,7 +86,7 @@ DOCUMENTATION :: END
         <div class="modal-footer">
             <div>
                 <span id="edit-user-status-message"></span>
-                <input type="button" id="save_user" class="btn btn-bright" value="Save">
+                <input type="button" id="save_user" class="btn btn-bright" value="保存">
             </div>
         </div>
     </div>
