--- a/data/interfaces/default/export_modal.html
+++ b/data/interfaces/default/export_modal.html
@@ -77,19 +77,19 @@ DOCUMENTATION :: END
                             </select>
                         </div>
                     </div>
-                    <p class="help-block">Select the metadata export level. Higher levels include all fields from the lower levels.</p>
+                    <p class="help-block">选择元数据导出级别。较高级别包含较低级别的所有字段。</p>
                 </div>
                 <div class="form-group">
-                    <label for="export_custom_metadata_fields">Custom Metadata Fields</label>
+                    <label for="export_custom_metadata_fields">自定义元数据字段</label>
                     <div class="row">
                         <div class="col-md-12">
                             <input type="text" class="form-control" id="export_custom_metadata_fields" name="export_custom_metadata_fields" data-field_type="Metadata">
                         </div>
                     </div>
-                    <p class="help-block">Add additional fields to the selected metadata export level.</p>
+                    <p class="help-block">添加额外字段到所选的元数据导出级别。</p>
                 </div>
                 <div class="form-group">
-                    <label for="export_media_info_level">Media Info Export Level</label>
+                    <label for="export_media_info_level">媒体信息导出级别</label>
                     <div class="row">
                         <div class="col-md-12">
                             <select class="form-control" id="export_media_info_level" name="export_media_info_level">
@@ -101,19 +101,19 @@ DOCUMENTATION :: END
                             </select>
                         </div>
                     </div>
-                    <p class="help-block">Select the media info export level. Higher levels include all fields from the lower levels.</p>
+                    <p class="help-block">选择媒体信息导出级别。较高级别包括较低级别的所有字段。</p>
                 </div>
                 <div class="form-group">
-                    <label for="export_custom_media_info_fields">Custom Media Info Fields</label>
+                    <label for="export_custom_media_info_fields">自定义媒体信息字段</label>
                     <div class="row">
                         <div class="col-md-12">
                             <input type="text" class="form-control" id="export_custom_media_info_fields" name="export_custom_media_info_fields" data-field_type="Media Info">
                         </div>
                     </div>
-                    <p class="help-block">Add additional fields to the selected media info export level.</p>
+                    <p class="help-block">在选定的媒体信息导出级别中添加额外的字段。</p>
                 </div>
                 <div class="form-group">
-                    <label for="export_thumb_level">Poster and Cover Image Export Level</label>
+                    <label for="export_thumb_level">海报和封面图像导出级别</label>
                     <div class="row">
                         <div class="col-md-12">
                             <select class="form-control" id="export_thumb_level" name="export_thumb_level">
