--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -256,7 +256,7 @@
     var msg_settings = '';
     % endif
 
-    var error_msg = 'There was an error communicating with your Plex Server.' + msg_settings;
+    var error_msg = '与您的 Plex 服务器通信时发生错误。' + msg_settings;
 
     % if 'current_activity' in config['home_sections'] or 'recently_added' in config['home_sections']:
     var server_status;
