--- a/data/interfaces/default/library_recently_added.html
+++ b/data/interfaces/default/library_recently_added.html
@@ -119,6 +119,6 @@ DOCUMENTATION :: END
     </div>
 </div>
 % else:
-<div class="text-muted">No stats to show.
+<div class="text-muted">没有统计数据可显示。
 </div><br>
 % endif
