--- a/data/interfaces/default/mobile_device_config.html
+++ b/data/interfaces/default/mobile_device_config.html
@@ -64,7 +64,7 @@
         </div>
         <div class="modal-footer">
             <input type="button" id="delete-mobile-device" class="btn btn-danger btn-edit" style="float:left;" value="Delete">
-            <input type="button" id="save-mobile-device" class="btn btn-bright" value="Save">
+            <input type="button" id="save-mobile-device" class="btn btn-bright" value="保存">
         </div>
     </div>
 </div>
