--- a/data/interfaces/default/mobile_devices_table.html
+++ b/data/interfaces/default/mobile_devices_table.html
@@ -45,7 +45,7 @@ DOCUMENTATION :: END
     % endfor
     <li class="add-mobile-device pointer" id="register-mobile-device" data-target="#api-qr-modal" data-toggle="modal">
         <span>
-            <span class="toggle-left"><i class="fa fa-lg fa-fw fa-mobile"></i></span> Register a new device
+            <span class="toggle-left"><i class="fa fa-lg fa-fw fa-mobile"></i></span> 注册新设备
             <span class="toggle-right"><i class="fa fa-lg fa-fw fa-plus"></i></span>
         </span>
     </li>
