--- a/data/interfaces/default/newsletter_config.html
+++ b/data/interfaces/default/newsletter_config.html
@@ -462,7 +462,7 @@
         <div class="modal-footer">
             <input type="button" id="delete-newsletter-item" class="btn btn-danger btn-edit" style="float:left;" value="Delete">
             <input type="button" id="duplicate-newsletter-item" class="btn btn-dark btn-edit" style="float:left;" value="Duplicate">
-            <input type="button" id="save-newsletter-item" class="btn btn-bright" value="Save">
+            <input type="button" id="save-newsletter-item" class="btn btn-bright" value="保存">
         </div>
     </div>
 </div>
