--- a/data/interfaces/default/notifiers_table.html
+++ b/data/interfaces/default/notifiers_table.html
@@ -38,7 +38,7 @@ DOCUMENTATION :: END
     % endfor
     <li class="add-notification-agent pointer" id="add-notification-agent" data-target="#add-notifier-modal" data-toggle="modal">
         <span>
-            <span class="toggle-left"><i class="fa fa-lg fa-fw fa-bell"></i></span> Add a new notification agent
+            <span class="toggle-left"><i class="fa fa-lg fa-fw fa-bell"></i></span> 添加一个新的通知代理
             <span class="toggle-right"><i class="fa fa-lg fa-fw fa-plus"></i></span>
         </span>
     </li>
