--- a/data/interfaces/default/sync.html
+++ b/data/interfaces/default/sync.html
@@ -120,7 +120,7 @@
             };
             sync_table = $('#sync_table').DataTable(sync_table_options);
             var colvis = new $.fn.dataTable.ColVis(sync_table, {
-                buttonText: '<i class="fa fa-columns"></i> Select columns',
+                buttonText: '<i class="fa fa-columns"></i> 选择列',
                 buttonClass: 'btn btn-dark',
                 exclude: [0]
             });
