--- a/data/interfaces/default/user_player_stats.html
+++ b/data/interfaces/default/user_player_stats.html
@@ -39,5 +39,5 @@ DOCUMENTATION :: END
 </ul>
 % endfor
 % else:
-<div class="text-muted">No stats to show.</div><br>
+<div class="text-muted">没有统计数据可显示。</div><br>
 % endif
