--- a/data/interfaces/default/edit_library.html
+++ b/data/interfaces/default/edit_library.html
@@ -80,7 +80,7 @@ DOCUMENTATION :: END
         <div class="modal-footer">
             <div>
                 <span id="edit-library-status-message"></span>
-                <input type="button" id="save_library" class="btn btn-bright" value="Save">
+                <input type="button" id="save_library" class="btn btn-bright" value="保存">
             </div>
         </div>
     </div>
