--- a/data/interfaces/default/library_stats.html
+++ b/data/interfaces/default/library_stats.html
@@ -92,5 +92,5 @@ DOCUMENTATION :: END
 % endif
 % endfor
 % else:
-<div class="text-muted">No stats to show.</div><br>
+<div class="text-muted">没有统计数据可显示。</div><br>
 % endif
