--- a/data/interfaces/default/notifier_config.html
+++ b/data/interfaces/default/notifier_config.html
@@ -419,7 +419,7 @@
         <div class="modal-footer">
             <input type="button" id="delete-notifier-item" class="btn btn-danger btn-edit" style="float:left;" value="Delete">
             <input type="button" id="duplicate-notifier-item" class="btn btn-dark btn-edit" style="float:left;" value="Duplicate">
-            <input type="button" id="save-notifier-item" class="btn btn-bright" value="Save">
+            <input type="button" id="save-notifier-item" class="btn btn-bright" value="保存">
         </div>
     </div>
 </div>
