--- a/data/interfaces/default/scheduler_table.html
+++ b/data/interfaces/default/scheduler_table.html
@@ -20,11 +20,11 @@ DOCUMENTATION :: END
 <table class="config-scheduler-table small-muted">
     <thead>
         <tr>
-            <th>Scheduled Task</th>
-            <th>State</th>
-            <th>Interval</th>
-            <th>Next Run In</th>
-            <th>Next Run Time</th>
+            <th>计划任务</th>
+            <th>状态</th>
+            <th>周期</th>
+            <th>距离下次运行</th>
+            <th>下次运行时间</th>
         </tr>
     </thead>
     <tbody>
