--- a/data/interfaces/default/user_recently_watched.html
+++ b/data/interfaces/default/user_recently_watched.html
@@ -165,5 +165,5 @@ DOCUMENTATION :: END
     </div>
 </div>
 % else:
-<div class="text-muted">No stats to show.</div><br>
+<div class="text-muted">没有统计数据可显示。</div><br>
 % endif
